Add GPL license headers to all source files

--- a/README
+++ b/README
@@ -39,3 +39,7 @@ Send feedback to Lesa via tell or mudmail
 Enjoy!
 
 Lesa, Priestess of Pishe
+
+## License
+
+This project is licensed under the GNU General Public License v3.0 - see the [LICENSE](LICENSE) file for details.
