--- a/README
+++ b/README
@@ -4,17 +4,27 @@ The code has been carefully written to ensure that none of the MUD's rules are v
 i.e. there are no triggers or automatic actions, and commands are only sent to the mud
 in response to an action by the user.
 
-The easiest way to run the client is to use the provided run scripts:
-- On Windows: double-click `run.bat` or run it from the command line.
-- On Linux/macOS: run `./run.sh` from the terminal (you may need to run `chmod +x run.sh` first).
+### How to Run
 
-You can also download IntelliJ IDEA (Free edition). Clone this
-Github repository from the splash screen, select the "Main" run config at the top right, and
-click the run or debug button.
+The easiest way to run the client is to use the launch scripts provided in the root folder or download a pre-packaged release:
 
-If config.json doesn't exist, it will be created on first run.
+1.  **Download the latest release**: Go to the "Releases" section on GitHub and download the `dwclient-<version>.zip` file.
+2.  **Unzip**: Extract the contents of the ZIP file to a folder.
+3.  **Configure**: Open the `config.json` file in a text editor to customize it with your character details, passwords, and other preferences.
+4.  **Run the script for your OS**:
+    - **Windows**: Double-click `run-windows.bat`.
+    - **macOS**: Double-click `run-mac.command`.
+    - **Linux**: Run `./run-linux.sh`.
 
-Edit the config.json to add your characters' password, and the password can be send by choosing
+These scripts will automatically launch the application using the local `config.json`. If you are building from source, the scripts will also attempt to build the application (requires Maven and Java 25).
+
+Alternatively, you can download IntelliJ IDEA (Free edition). Clone this Github repository from the splash screen, select the "Main" run config at the top right, and click the run or debug button.
+
+### Configuration
+
+The `config.json` file is included in the release ZIP. You should modify it to customize the client to your liking.
+
+Edit the `config.json` to add your characters' password, and the password can be sent by choosing
 Menu -> Send Password, or by typing the 'pw' command.
 
 You can also configure per-character teleports. These will be used automatically while speedwalking.
