Replace "loc" command with "room" across the application and update related documentation and tests

--- a/README
+++ b/README
@@ -40,7 +40,7 @@ Some commands:
 
 /help   (List all internal commands)
 /       (Show current location and room ID)
-/loc <room name>
+/room <room name>
 /npc <npc name>
 /item <item name>
 /map [number]
