--- a/README
+++ b/README
@@ -10,7 +10,7 @@ The easiest way to run the client is to use the launch scripts provided in the r
 
 1.  **Download the latest release**: Go to the "Releases" section on GitHub and download the `dwclient-<version>.zip` file.
 2.  **Unzip**: Extract the contents of the ZIP file to a folder.
-3.  **Configure**: Open the `config.json` file in a text editor to customize it with your character details, passwords, and other preferences.
+3.  **Configure**: Open the `config.json` file in a text editor to customize it with your character details and other preferences.
 4.  **Run the script for your OS**:
     - **Windows**: Double-click `run-windows.bat`.
     - **macOS**: Double-click `run-mac.command`.
@@ -24,8 +24,11 @@ Alternatively, you can download IntelliJ IDEA (Free edition). Clone this Github 
 
 The `config.json` file is included in the release ZIP. You should modify it to customize the client to your liking.
 
-Edit the `config.json` to add your characters' password, and the password can be sent by choosing
-Menu -> Send Password, or by typing the "/password" command.
+Your character password is stored via the in-app dialog (Menu -> Send Password or the "/pw"
+command) using Java Preferences. Preferences are stored per OS (for example: Windows Registry under
+`HKEY_CURRENT_USER\Software\JavaSoft\Prefs`, macOS under
+`~/Library/Preferences/<package-name>.plist`, and Linux under
+`~/.java/.userPrefs/<package-name>/`) so persistence depends on your OS profile.
 
 Type "/help" for a full list of available internal commands.
 
